<resources>
    <string name="app_name">ShowsMarkoSoljic</string>
    <string name="login_activity_username">Username</string>
    <string name="login_activity_password">Password</string>
    <string name="login_activity_log_in">Log in</string>
    <string name="main_activity_you_re_in">You’re in!</string>
    <string name="main_activity_welcome_d">Welcome %s</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="season_episode"><![CDATA[Season & episode]]></string>
    <string name="episode_title">Episode title</string>
    <string name="upload_photo">Upload photo</string>
    <string name="episode_description">Episode description</string>
    <string name="don_t_wake_him_up">Don’t wake him up</string>
    <string name="someone_has_fallen_asleep">Someone has fallen asleep.</string>
    <string name="add_episode">Add episode</string>
    <string name="save">Save</string>
    <string name="season_format">S%s</string>
    <string name="episode_format">E%s</string>
    <string name="remember_me">Remember me</string>
    <string name="or">or</string>
    <string name="create_an_account">Create an account</string>
    <string name="e_mail">e-mail</string>
    <string name="password_again">Password again</string>
    <string name="create_account">Create account</string>
    <string name="loading">Loading...</string>
</resources>
