<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activityLoginLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login.LoginActivity">

    <ImageView
            android:id="@+id/ivAppLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dp"
            android:src="@drawable/ic_img_logo_mark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/usernameEtInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="31dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:theme="@style/TextInputLayoutAppearance"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivAppLogo">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="E-mail"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordEtInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:theme="@style/TextInputLayoutAppearance"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/usernameEtInputLayout"
            app:passwordToggleDrawable="@drawable/ic_akcije_show_password_red"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/buttonDisabledPink">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/login_activity_password"
                android:inputType="textPassword"
                android:maxLength="10"/>
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
            android:text="Remember me"
            android:layout_width="0dp"
            android:layout_height="36dp"
            app:layout_constraintStart_toStartOf="@+id/passwordEtInputLayout"
            android:layout_marginStart="16dp"
            android:paddingEnd="16dp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/passwordEtInputLayout"
            android:id="@+id/checkBox" android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"/>


    <Button
            android:id="@+id/btnLogin"
            style="@style/LoginActivityButtonDisabled"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/round_btn"
            android:text="@string/login_activity_log_in"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/checkBox"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/or" app:layout_constraintTop_toBottomOf="@+id/btnLogin"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginTop="24dp" android:id="@+id/textView4"/>

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/create_an_account"
              android:id="@+id/tvCreateAnAccount"
              android:textColor="@color/buttonEnabledPink"
              android:background="?attr/selectableItemBackground"
              android:paddingEnd="16dp"
              android:textStyle="bold"
              android:clickable="true"
              android:focusable="true"
              android:paddingStart="16dp"
              android:textSize="15sp" android:layout_marginTop="8dp"
              app:layout_constraintTop_toBottomOf="@+id/textView4"
              app:layout_constraintEnd_toEndOf="@+id/textView4" app:layout_constraintStart_toStartOf="@+id/textView4"/>


</androidx.constraintlayout.widget.ConstraintLayout>