<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".ui.registerUser.RegisterUserFragment">

    <androidx.appcompat.widget.Toolbar
            android:layout_width="0dp"
            android:id="@+id/toolbar"
            android:layout_height="?actionBarSize"
            app:navigationIcon="?attr/homeAsUpIndicator"
            app:title="Register"
            app:titleTextAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
    />

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:theme="@style/TextInputLayoutAppearance"
            app:passwordToggleDrawable="@drawable/ic_akcije_show_password_red"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/buttonDisabledPink"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0" android:id="@+id/textInputLayout" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/e_mail"
                android:inputType="textEmailAddress"
        />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:theme="@style/TextInputLayoutAppearance"
            app:passwordToggleDrawable="@drawable/ic_akcije_show_password_red"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/buttonDisabledPink"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" android:id="@+id/textInputLayout3">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPasswordFirst"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password_again"
                android:inputType="textPassword"
                android:maxLength="10"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:theme="@style/TextInputLayoutAppearance"
            app:passwordToggleDrawable="@drawable/ic_akcije_show_password_red"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/buttonDisabledPink"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout" android:id="@+id/textInputLayout2">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPasswordSecond"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/login_activity_password"
                android:inputType="textPassword"
                android:maxLength="10"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
            android:id="@+id/btnCreateAccount"
            style="@style/LoginActivityButtonDisabled"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:background="@drawable/round_btn"
            android:text="@string/create_account"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout3"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout3" android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>